[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "final-incantation-battle"
version = "0.1.0"
description = "Foundational battle engine for a Discord RPG bot"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "discord.py>=2.3",
]

[project.scripts]
final-incantation-bot = "battle_system.bot:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
